Don't crash if there are command-line arguments (bug 261734) by doing ParseConfig before ParseArgs, moving gtk_init to RunWizard, and adding a check in ErrorHandler to log errors to the console if gtk hasn't been initialized yet. r=ajschultz, sr=dveditz.